tests/parsing/argument_order/stderr.golden
error: positional argument follows keyword argument
bus.fbd +4:18
   |
 4 | main my_bus(c=2, 1)
   |                  ^
